--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -30,13 +30,18 @@
   box-sizing: border-box;
 }
 
-.matrix.question-form-grid-table td label {
-  white-space: nowrap;
-  > input {
-    margin: 0 5px;
+.matrix.question-form-grid-table td {
+  input[type="number"] {
+    width: 4em;
   }
-  > span {
-    margin: 0 5px 0 0;
+  label {
+    white-space: nowrap;
+    > input {
+      margin: 0 5px;
+    }
+    > span {
+      margin: 0 5px 0 0;
+    }
   }
 }
 
