分岐条件の表示のCSSを調整

--- a/lib/preview/css/detail.scss
+++ b/lib/preview/css/detail.scss
@@ -114,6 +114,9 @@ body {
 
   .branch-editor.detail-mode {
     line-height: 1;
+    .branch-editor-header > span, .condition-editor > span {
+      padding: 1px 7px;
+    }
   }
 }
 
