--- a/lib/runtime/css/common.scss
+++ b/lib/runtime/css/common.scss
@@ -11,6 +11,9 @@ $border-color-page: gold;
 $background-color-question-detail: #e5f0ff;
 $border-color-question-detail: #08198e;
 
+$background-color-page-detail: $backgroud-color-finisher;
+$border-color-page-detail: $border-color-finisher;
+
 $background-color-detail-function: #426ef4;
 $color-detail-function: #fff;
 
