ItemEditorが空のときに高さが0pxになってしまう不具合を修正

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -192,6 +192,7 @@ html, body {
   border-bottom: 1px solid #ddd;
   border-right: 1px solid #ddd;
   padding-left: 4px;
+  min-height: 23px;
   
   &:hover {
     background-color: #fee;
