追加入力が数値の場合にスタイルがきかなくなってた不具合に対応

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -46,7 +46,7 @@
 }
 
 .question-form-list {
-  input[type="number"] {
+  input.number {
     width: $number-input-width;
   }
 }
@@ -60,7 +60,7 @@
     background-color: #ffe4c4;
   }
   td {
-    input[type="number"] {
+    input.number {
       width: $number-input-width;
     }
     label {
