項目の表示・非表示機能のエディタ・ランタイムを実装

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -628,3 +628,11 @@ html, body {
   }
 }
 
+.item-visibility-editor {
+  td.disabled {
+    background-color: #ddd;
+  }
+}
+.item-visibility-condition-popover.popover {
+  max-width: 800px;
+}
