--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -38,6 +38,10 @@
   .notice {
     font-weight: normal;
   }
+
+  .hidden {
+    display: none;
+  }
 }
 .formErrorMsg.formErrorContent {
   color: #fff;
