--- a/lib/preview/css/detail.scss
+++ b/lib/preview/css/detail.scss
@@ -62,18 +62,30 @@ html, body {
     padding: 0 10px;
     margin-top: 10px;
     display: flex;
+    flex-wrap: wrap;
     &:empty {
       display: none;
     }
     > div {
-      width: 50%;
+      flex: auto; 
       padding: 5px;
-      table {
+    }
+    table {
+      width: 100%;
+      th {
+        padding: 0 5px;
+        border: 1px solid black;
+        background-color: #b5c0ef;
+      }
+      td {
+        padding: 0 5px;
+        border: 1px solid black;
+      }
+    }
+    .item-visibilities {
+      width: 100%;
+      > div {
         width: 100%;
-        td {
-          padding: 0 5px;
-          border: 1px solid black;
-        }
       }
     }
   }
