プレビュー時にページ番号を表示するように修正

--- a/lib/runtime/css/common.scss
+++ b/lib/runtime/css/common.scss
@@ -45,6 +45,18 @@ $number-input-width: 4em;
   overflow: hidden;
 }
 
+@mixin no($bgColor, $borderColor) {
+  position: absolute;
+  right: 0;
+  top: 0;
+  background: $bgColor;
+  border-left: 1px solid $borderColor;
+  border-bottom: 1px solid $borderColor;
+  border-radius: 0 4px 0 4px;
+  padding: 0 10px;
+  z-index: 1;
+}
+
 .detail-function {
   @include tag($background-color-detail-function, $color-detail-function, $background-color-detail-function);
 }
