--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -39,9 +39,6 @@
     font-weight: normal;
   }
 
-  .hidden {
-    display: none;
-  }
 }
 .formErrorMsg.formErrorContent {
   color: #fff;
@@ -89,6 +86,19 @@
   }
 }
 
+.page-no {
+  @include no($backgroud-color-page, $border-color-page);
+}
+.branch-no {
+  @include no($backgroud-color-branch, $border-color-branch);
+}
+.finisher-no {
+  @include no($backgroud-color-finisher, $border-color-finisher);
+}
+
+.hidden {
+  display: none;
+}
 /* フォーム　エラー表示　SP */
 
 $form-error-content-margin: 4px;
