--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -129,3 +129,12 @@ $form-error-content-margin-total: $form-error-content-margin * 2;
     }
   }
 }
+
+.m3-enquete__user-agent-group--PC .questionBox .question select {
+  display: block;
+  width: 30%;
+  height: 34px;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #666;
+}
