Selectの幅を内容によって30%から90%までで動的に決めるように変更

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -132,7 +132,8 @@ $form-error-content-margin-total: $form-error-content-margin * 2;
 
 .m3-enquete__user-agent-group--PC .questionBox .question select {
   display: block;
-  width: 30%;
+  min-width: 30%;
+  max-width: 90%;
   height: 34px;
   background-color: #fff;
   background-image: none;
