selectのcssをSPにも適用

--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -130,7 +130,7 @@ $form-error-content-margin-total: $form-error-content-margin * 2;
   }
 }
 
-.m3-enquete__user-agent-group--PC .questionBox .question select {
+.questionBox .question select {
   display: block;
   min-width: 30%;
   max-width: 90%;
