refs #162313 プレビューでの任意ページからの開始
https://redmine.m3.com/issues/162313
※e2eテストは手元で動かない状況なので、一旦除外してます

--- a/lib/preview/css/preview.scss
+++ b/lib/preview/css/preview.scss
@@ -9,8 +9,18 @@
   width: 800px;
   margin: 10px auto 0 auto;
   box-sizing: border-box;
-  > h3 {
+  > .title {
     text-align: left;
     font-size: large;
+  }
+  > .go-to-specified-page {
+    text-align: left;
+  }
+  > .help {
+    text-align: left;
+    line-height: 16px;
+    color: #777;
+    margin-top: 5px;
+    margin-left: 5px;
   }
 }
