refs #162313 レビュー結果反映
https://redmine.m3.com/issues/162313

--- a/lib/preview/css/preview.scss
+++ b/lib/preview/css/preview.scss
@@ -13,7 +13,7 @@
     text-align: left;
     font-size: large;
   }
-  > .go-to-specified-page {
+  > .current-page {
     text-align: left;
   }
   > .help {
