アイテムの一括追加機能を追加

--- a/lib/editor/css/editor.scss
+++ b/lib/editor/css/editor.scss
@@ -636,3 +636,10 @@ html, body {
 .item-visibility-condition-popover.popover {
   max-width: 800px;
 }
+.item-bulk-add-popover.popover {
+  max-width: none;
+}
+.item-bulk-add-editor {
+  width: 800px;
+  height: 400px;
+}
