サーバとの通信中はフォームを触れないように修正

--- a/lib/editor/css/imageManager.scss
+++ b/lib/editor/css/imageManager.scss
@@ -32,4 +32,23 @@
       }
     }
   }
+  .image-manager-block-layer {
+    background: black;
+    opacity: 0.5;
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+  }
+  .image-manager-spinner {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
