--- a/lib/runtime/css/runtime.scss
+++ b/lib/runtime/css/runtime.scss
@@ -116,6 +116,9 @@ $form-error-content-margin-total: $form-error-content-margin * 2;
       .formErrorContent {
         width: calc(100% - #{$form-error-content-margin-total});
       } 
+      img {
+        max-width: none;
+      }
     }
   }
   .fixed {
