回答時に入力値制限が動くように修正・詳細プレビューにも入力値制限を表示

--- a/lib/runtime/css/common.scss
+++ b/lib/runtime/css/common.scss
@@ -76,3 +76,6 @@ $number-input-width: 4em;
 .validation-detail {
   @include tag($background-color-validation-detail, $color-validation-detail, $background-color-validation-detail);
 }
+.number-validation-type {
+  @include tag($background-color-validation-detail, $color-validation-detail, $background-color-validation-detail);
+}
